add photo caption

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <a href="img/seattle.jpg">
               <img src="img/seattle.jpg" alt="">
               <div id="details">
-              <p>Experimentation with color and texture.</p>
+              <p>35mm of Seattle Skyline from the Space Needle.</p>
             </div>
                 </a>
             </li>
